--- a/src/templates/base.html
+++ b/src/templates/base.html
@@ -61,8 +61,13 @@
             <div class="collapse navbar-collapse" id="navbarNav">
                 <ul class="navbar-nav ms-auto">
                     <li class="nav-item">
-                        <a class="nav-link" href="/">
+                        <a class="nav-link" href="/connect">
                             <i class="bi bi-wifi me-1"></i>Connect
+                        </a>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link" href="/">
+                            <i class="bi bi-phone me-1"></i>Devices
                         </a>
                     </li>
                     <li class="nav-item">
